--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,12 @@
             <button onclick="clearDisplay()">C</button>
             <button onclick="calculateResult()">=</button>
             <button onclick="appendOperator('/')">/</button>
+
+            <button onclick="toggleSign()">±</button>
+            <button onclick="calculateSquareRoot()">√</button>
+            <button onclick="appendToDisplay('^')">^</button>
+            <button onclick="appendToDisplay('.')">.</button>
+
         </div>
     </div>
 
