--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -60,3 +60,9 @@ button:hover {
 button:active {
     background-color: #ccc;
 }
+h1 {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 24px;
+}
+
