--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
-    <h1>This simple app calculator</h1>
+        <div class="container">
+        <h1>This simple app calculator</h1>
+
+        <div class="calculator">
     
     <div class="calculator">
         <input type="text" id="display" class="display" disabled>
