--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,7 @@
             <button onclick="appendToDisplay('.')">.</button>
             <button onclick="calculateResult()">=</button>
 
+            </div>
         </div>
     </div>
 
