--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <div class="container">
-        <h1>This simple app calculator</h1>
+        <h1>Simple app calculator</h1>
 
     
     
